Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Profil Saya</title>
+  <title>Profil Oka Ginting</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -14,20 +14,20 @@
 
   <section class="bio">
     <h2>Tentang Saya</h2>
-    <p>Saya sedang belajar HTML, CSS, dan JavaScript untuk menjadi Web Developer remote.</p>
+    <p>Saya sedang belajar HTML, CSS, dan JavaScript untuk menjadi Web Developer remote.</p>
   </section>
 
   <section class="kontak">
     <h2>Kontak</h2>
     <ul>
       <li>Email: okaginting3@gmail.com</li>
-      <li>LinkedIn: <a href="#">linkedin.com/in/okaginting</a></li>
-      <li>GitHub: <a href="#">github.com/okaginting</a></li>
+      <li>LinkedIn: <a href="https://linkedin.com/in/okaginting">linkedin.com/in/okaginting</a></li>
+      <li>GitHub: <a href="https://github.com/okaginting">github.com/okaginting</a></li>
     </ul>
   </section>
 
   <footer>
-    <p>© 2025 [Oka Ginting]. Dibuat dengan cinta dan semangat belajar.</p>
+    <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
   </footer>
 </body>
 </html>
