--- a/index.html
+++ b/index.html
@@ -26,6 +26,23 @@
     </ul>
   </section>
 
+  <section class="container">
+  <div class="bio">
+    <h2>Tentang Saya</h2>
+    <p>Saya sedang belajar HTML, CSS, dan JavaScript untuk menjadi Web Developer remote.</p>
+  </div>
+
+  <div class="kontak">
+    <h2>Kontak</h2>
+    <ul>
+      <li>Email: okaginting3@gmail.com</li>
+      <li>LinkedIn: <a href="#">linkedin.com/in/okaginting</a></li>
+      <li>GitHub: <a href="#">github.com/okaginting</a></li>
+    </ul>
+  </div>
+</section>
+
+  
   <footer>
     <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
   </footer>
