--- a/index.html
+++ b/index.html
@@ -28,6 +28,21 @@
   </div>
 </section>
 
+<section class="container">
+  <div class="bio">
+    <h2>Pendidikan</h2>
+    <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
+  </div>
+
+  <div class="kontak">
+    <h2>Kontak</h2>
+    <ul>
+      <li>Email: okaginting3@gmail.com</li>
+      <li>LinkedIn: <a href="#">linkedin.com/in/okaginting</a></li>
+      <li>GitHub: <a href="#">github.com/okaginting</a></li>
+    </ul>
+  </div>
+</section>
   
   <footer>
     <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
