--- a/index.html
+++ b/index.html
@@ -34,12 +34,11 @@
     <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
   </div>
 
-  <div class="kontak">
-    <h2>Kontak</h2>
+  <div class="Pekerjaan">
+    <h2>Pekerjaan</h2>
     <ul>
-      <li>Email: okaginting3@gmail.com</li>
-      <li>LinkedIn: <a href="#">linkedin.com/in/okaginting</a></li>
-      <li>GitHub: <a href="#">github.com/okaginting</a></li>
+       <h2>Pekerjaan</h2>
+    <p>Saya bekerja sebagai Specialist Electrical Maintenance di Pulp & Paper.</p>
     </ul>
   </div>
 </section>
