--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </section>
 
 <section class="container">
-  <div class="bio">
+  <div class="Pendidikan">
     <h2>Pendidikan</h2>
     <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
   </div>
@@ -40,6 +40,15 @@
     </ul>
   </div>
 </section>
+
+  <div class="keahlian">
+  <h2>Keahlian</h2>
+  <ul>
+    <li>HTML, CSS, JavaScript</li>
+    <li>AutoCAD, PLC, SCADA (jika ada)</li>
+    <li>Electrical Troubleshooting</li>
+  </ul>
+</div>
   
   <footer>
     <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
