--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
     <li>Electrical Troubleshooting</li>
   </ul>
 </div>
+
+    <section class="cv">
+  <h2>Download CV</h2>
+  <a href="CV-Oka-Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
+</section>
+
   
   <footer>
     <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
