--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <section class="cv">
   <h2>Download CV</h2>
-  <a href="CV-Oka-Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
+  <a href="CV Oka Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
 </section>
 
   
