--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
   <h2>Keahlian</h2>
   <ul>
     <li>HTML, CSS, JavaScript</li>
-    <li>AutoCAD, PLC, SCADA (jika ada)</li>
-    <li>Electrical Troubleshooting</li>
+    <li>AutoCAD, PLC, SCADA, VFD, MV&LV Panel</li>
+    <li>Electrical Troubleshooting, RCA, People Mangement</li>
   </ul>
 </div>
 
