--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Halo, saya Oka Ginting</h1>
     <p>Frontend Web Developer Pemula</p>
   </header>
-
+<script src="script.js"></script>
   <section class="container">
   <div class="bio">
     <h2>Tentang Saya</h2>
