--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
   <script src="script.js"></script>
 <body>
+  <section>
+  <p id="sapaan">Halo, selamat datang!</p>
+</section>
   <header>
     <h1>Halo, saya Oka Ginting</h1>
     <p>Frontend Web Developer Pemula</p>
