--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
   <script src="script.js"></script>
   <p id="sapaan">Halo, selamat datang!</p>
+  <p id="umur">Umur saya: </p>
 <body>
    <header>
     <h1>Halo, saya Oka Ginting</h1>
