--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
    <header>
     <h1>Halo, saya Oka Ginting</h1>
-    <p>Frontend Web Developer Pemula</p>
+   // <p>Frontend Web Developer Pemula</p>
   </header>
 
   <section class="container">
