--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
   <script src="script.js"></script>
-  <p id="sapaan">Halo, selamat datang!</p>
+  //<p id="sapaan">Halo, selamat datang!</p>
   <p id="umur">Umur saya: </p>
 <body>
    <header>
