--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <h1>Halo, saya Oka Ginting</h1>
    <p>Frontend Web Developer Pemula</p>
   </header>
-
+<button onclick="ubahSapaan()">Klik Aku</button>
+<p id="sapaan">Halo!</p>
   <section class="container">
   <div class="bio">
     <h2>Tentang Saya</h2>
