--- a/index.html
+++ b/index.html
@@ -32,34 +32,34 @@
 </section>
 
 <section class="container">
-  <div class="Pendidikan">
-    <h2>Pendidikan</h2>
-    <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
-  </div>
+ <section id="pendidikanSection">
+  <h2>Pendidikan</h2>
+  <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
+</section>
 
-  <div class="Pekerjaan">
+<section id="keahlianSection">
+  <h2>Keahlian</h2>
+  <p>HTML, CSS, JavaScript, AutoCAD, PLC, dll.</p>
+</section>
+
+  <section class="container">
+   <div class="Pekerjaan">
     <h2>Pekerjaan</h2>
     <p>Saya bekerja sebagai Specialist Electrical Maintenance di Pulp & Paper.</p>
     </ul>
   </div>
 </section>
 
-  <section class="container">
-  <div class="keahlian">
-  <h2>Keahlian</h2>
-  <ul>
-    <li>HTML, CSS, JavaScript</li>
-    <li>AutoCAD, PLC, SCADA, VFD, MV&LV Panel</li>
-    <li>Electrical Troubleshooting, RCA, People Mangement</li>
-  </ul>
-</div>
-
     <section class="cv">
   <h2>Download CV</h2>
   <a href="CV Oka Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
 </section>
 
-  
+  <div style="text-align:center; margin: 20px;">
+  <button id="togglePendidikan">Tampilkan/Sembunyikan Pendidikan</button>
+  <button id="toggleKeahlian">Tampilkan/Sembunyikan Keahlian</button>
+</div>
+
   <footer>
     <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
   </footer>
