--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <p id="umur">Umur saya: </p>
 <body>
    <header>
+     <button id="darkModeToggle">🌓 Ganti Tema</button>
     <h1>Halo, saya Oka Ginting</h1>
    <p>Frontend Web Developer Pemula</p>
   </header>
