--- a/index.html
+++ b/index.html
@@ -66,3 +66,11 @@
   </footer>
 </body>
 </html>
+<!-- semua konten utama -->
+</section> <!-- atau </div> penutup container -->
+
+<footer id="mainFooter">
+  <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
+</footer>
+</body>
+</html>
