--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul>
       <li>Email: okaginting3@gmail.com</li>
       <li>LinkedIn: <a href="#">linkedin.com/in/okaginting</a></li>
-      <li>GitHub: <a href="#">github.com/okaginting</a></li>
+      <li>GitHub: <a href="#">https://okaginting.github.io/learning/</a></li>
     </ul>
   </div>
 </section>
