--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript.">
   <link rel="stylesheet" href="style.css" />
 </head>
-  <script src="script.js"></script>
+ // <script src="script.js"></script>
   <p id="sapaan">Halo, selamat datang!</p>
   <button onclick="ubahSapaan()">Klik Aku</button>
   <p id="umur">Umur saya: </p>
