--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Oka Ginting – Frontend Web Developer</title>
 <meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript.">
   <link rel="stylesheet" href="style.css" />
- // <script src="script.js"></script>
+  <script src="script.js"></script>
   <p id="sapaan">Halo, selamat datang!</p>
   <button onclick="ubahSapaan()">Klik Aku</button>
   <p id="umur">Umur saya: </p>
