--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 <meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript.">
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
+<head>
+<body>
   <p id="sapaan">Halo, selamat datang!</p>
   <button onclick="ubahSapaan()">Klik Aku</button>
   <p id="umur">Umur saya: </p>
-<body>
+
    <header>
     <h1>Halo, saya Oka Ginting</h1>
    <p>Frontend Web Developer Pemula</p>
