--- a/index.html
+++ b/index.html
@@ -8,17 +8,24 @@
 <meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript.">
   <link rel="stylesheet" href="style.css" />
   <script src="script.js"></script>
-<head>
+</head>
+  
 <body>
+  <!-- Interaksi awal -->
   <p id="sapaan">Halo, selamat datang!</p>
   <button onclick="ubahSapaan()">Klik Aku</button>
   <p id="umur">Umur saya: </p>
 
+ <!-- Header -->
    <header>
     <h1>Halo, saya Oka Ginting</h1>
    <p>Frontend Web Developer Pemula</p>
   </header>
+
+ <!-- Tombol tema -->
   <button id="darkModeToggle">🌓 Ganti Tema</button>
+
+ <!-- Konten utama -->
   <section class="container">
   <div class="bio">
     <h2>Tentang Saya</h2>
@@ -67,6 +74,7 @@
 <!-- semua konten utama -->
 </section> <!-- atau </div> penutup container -->
 
+<!-- Footer -->
 <footer id="mainFooter">
   <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
 </footer>
