--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/png" href="favicon.png" />
   <title>Oka Ginting – Frontend Web Developer</title>
-<meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript.">
+  <meta name="description" content="CV dan Portofolio Online Oka Ginting. Frontend Developer pemula yang sedang belajar HTML, CSS, dan JavaScript." />
   <link rel="stylesheet" href="style.css" />
-  <script src="script.js"></script>
+  <script src="script.js" defer></script> <!-- gunakan defer agar JS menunggu HTML selesai -->
 </head>
-  
+
 <body>
-  <!-- Interaksi awal -->
+  <!-- Tambahan interaksi -->
   <p id="sapaan">Halo, selamat datang!</p>
   <button onclick="ubahSapaan()">Klik Aku</button>
   <p id="umur">Umur saya: </p>
