--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -1,1 +1,23 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Belajar Tailwind</title>
+  <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
+</head>
+<body class="bg-gray-100 text-gray-900">
+
+  <header class="bg-blue-600 text-white p-4 text-center">
+    <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
+    <p class="text-sm">Frontend Web Developer Pemula</p>
+  </header>
+
+  <section class="max-w-xl mx-auto p-4 mt-6 bg-white rounded-lg shadow">
+    <h2 class="text-xl font-semibold mb-2">Tentang Saya</h2>
+    <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
+  </section>
+
+</body>
+</html>
 
