--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-violet-1e1b4b text-gray-500">
 
-  <header class="bg-blue-500 text-white p-4 text-center">
+  <header class="bg-red-500 text-white p-4 text-center">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
     <p class="text-sm">Frontend Web Developer Pemula</p>
   </header>
