--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -6,14 +6,14 @@
   <title>Belajar Tailwind</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
 </head>
-<body class="bg-violet-1e1b4b text-gray-500">
+<body class="bg-violet-900 text-gray-900">
 
-  <header class="bg-red-500 text-white p-4 text-center">
+  <header class="bg-red-500 text-yellow p-4 text-center">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
     <p class="text-sm">Frontend Web Developer Pemula</p>
   </header>
 
-  <section class="max-w-xl mx-auto p-4 mt-6 bg-white rounded-lg shadow">
+  <section class="max-w-xl mx-auto p-4 mt-6 bg-black rounded-lg shadow">
     <h2 class="text-xl font-semibold mb-2">Tentang Saya</h2>
     <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
   </section>
