--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -18,6 +18,17 @@
     <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
   </section>
 
+<section class="container">
+ <section id="pendidikanSection">
+  <h2>Pendidikan</h2>
+  <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
+</section>
+
+<section id="keahlianSection">
+  <h2>Keahlian</h2>
+  <p>HTML, CSS, JavaScript, AutoCAD, PLC, dll.</p>
+</section>
+  
 </body>
 </html>
 
