--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -6,7 +6,7 @@
   <title>Belajar Tailwind</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
 </head>
-<body class="bg-violet-900 text-gray-900">
+<body class="bg-white-900 text-gray-900">
 
   <header class="bg-red-500 text-yellow p-4 text-center">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
