--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -1,34 +1,23 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Belajar Tailwind</title>
-  <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
-</head>
-<body class="bg-white-900 text-blue-900">
-
-  <header class="bg-red-500 text-yellow p-4 text-center">
+<body class="bg-white text-blue-900">
+  <header class="bg-red-500 text-center py-6">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
     <p class="text-sm">Frontend Web Developer Pemula</p>
   </header>
 
-  <section class="max-w-xl mx-auto p-4 mt-6 bg-black rounded-lg shadow">
-    <h2 class="text-xl font-semibold mb-2">Tentang Saya</h2>
-    <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
-  </section>
+  <main class="max-w-3xl mx-auto p-4">
+    <section class="bg-black text-blue-400 p-4 rounded mb-4">
+      <h2 class="text-xl font-semibold">Tentang Saya</h2>
+      <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
+    </section>
 
-<section class="container">
- <section id="pendidikanSection">
-  <h2>Pendidikan</h2>
-  <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
-</section>
+    <section class="mb-4">
+      <h2 class="font-bold">Pendidikan</h2>
+      <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
+    </section>
 
-<section id="keahlianSection">
-  <h2>Keahlian</h2>
-  <p>HTML, CSS, JavaScript, AutoCAD, PLC, dll.</p>
-</section>
-  
+    <section class="mb-4">
+      <h2 class="font-bold">Keahlian</h2>
+      <p>HTML, CSS, JavaScript, AutoCAD, PLC, dll.</p>
+    </section>
+  </main>
 </body>
-</html>
-
