--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Belajar Tailwind</title>
+  <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
+</head>
 <body class="bg-white text-blue-900">
   <header class="bg-red-500 text-center py-6">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
@@ -21,3 +29,5 @@
     </section>
   </main>
 </body>
+
+</html>
