--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
 </head>
 <body class="bg-white text-blue-900">
-  <header class="bg-red-500 text-center py-6">
+  <header class="bg-blue-500 text-center py-6">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
     <p class="text-sm">Frontend Web Developer Pemula</p>
   </header>
