--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -13,7 +13,7 @@
   </header>
 
   <main class="max-w-3xl mx-auto p-4">
-    <section class="bg-black text-blue-400 p-4 rounded mb-4">
+    <section class="bg-white text-black-400 p-4 rounded mb-4">
       <h2 class="text-xl font-semibold">Tentang Saya</h2>
       <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
     </section>
