--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -6,7 +6,7 @@
   <title>Belajar Tailwind</title>
   <script src="https://cdn.tailwindcss.com"></script> <!-- load tailwind -->
 </head>
-<body class="bg-white text-blue-900">
+<body class="bg-white text-white-900">
   <header class="bg-blue-500 text-center py-6">
     <h1 class="text-2xl font-bold">Halo, saya Oka Ginting</h1>
     <p class="text-sm">Frontend Web Developer Pemula</p>
