--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -13,15 +13,23 @@
   </header>
 
   <main class="max-w-3xl mx-auto p-4">
-    <section class="bg-white text-black-400 p-4 rounded mb-4">
-      <h2 class="text-xl font-semibold">Tentang Saya</h2>
-      <p>Saya sedang belajar HTML, CSS, JavaScript, dan Tailwind CSS.</p>
-    </section>
+   <section class="max-w-4xl mx-auto p-4">
+  <div class="flex flex-col md:flex-row gap-4">
+    
+    <!-- Kolom kiri -->
+    <div class="flex-1 bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-bold mb-2">Tentang Saya</h2>
+      <p>Saya sedang belajar HTML, CSS, dan Tailwind CSS.</p>
+    </div>
+    
+    <!-- Kolom kanan -->
+    <div class="flex-1 bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-bold mb-2">Pendidikan</h2>
+      <p>Lulusan Teknik Elektro dari ITS Surabaya.</p>
+    </div>
 
-    <section class="mb-4">
-      <h2 class="font-bold">Pendidikan</h2>
-      <p>Saya seorang lulusan Teknik Elektro dari ITS Surabaya.</p>
-    </section>
+  </div>
+</section>
 
     <section class="mb-4">
       <h2 class="font-bold">Keahlian</h2>
