--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -32,8 +32,21 @@
 </section>
 
     <section class="mb-4">
-      <h2 class="font-bold">Keahlian</h2>
-      <p>HTML, CSS, JavaScript, AutoCAD, PLC, dll.</p>
+     <div class="flex flex-col md:flex-row gap-4">
+    
+    <!-- Kolom kiri -->
+    <div class="flex-1 bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-bold mb-2">Keahlian</h2>
+      <p>HTLM, CSS, Autocad, PLC, SCADA, Inverter, .</p>
+    </div>
+    
+    <!-- Kolom kanan -->
+    <div class="flex-1 bg-white p-4 rounded shadow">
+      <h2 class="text-lg font-bold mb-2">Pekerjaan</h2>
+      <p>Saya adalah Specialist Electrical Maintenance di Pulp and Paper.</p>
+    </div>
+
+  </div>
     </section>
   </main>
 </body>
