--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -13,7 +13,7 @@
   </header>
 
   <main class="max-w-3xl mx-auto p-4">
-   <section class="max-w-4xl mx-auto p-4">
+  <section class="bg-white p-4 rounded shadow mb-4">
   <div class="flex flex-col md:flex-row gap-4">
     
     <!-- Kolom kiri -->
@@ -31,7 +31,8 @@
   </div>
 </section>
 
-    <section class="mb-4">
+   <main class="max-w-3xl mx-auto p-4">
+    <section class="bg-white p-4 rounded shadow mb-4">
      <div class="flex flex-col md:flex-row gap-4">
     
     <!-- Kolom kiri -->
