--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -53,25 +53,25 @@
  <main class="max-w-5xl mx-auto px-4 py-8">
   <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
     <!-- Kotak 1 -->
-    <section class="bg-white shadow p-4 rounded">
+   <section class="bg-white shadow p-4 rounded hover:shadow-lg transition">
       <h2 class="font-bold text-lg mb-2">Tentang Saya</h2>
       <p>Saya sedang belajar HTML, CSS, dan Tailwind CSS.</p>
     </section>
 
     <!-- Kotak 2 -->
-    <section class="bg-white shadow p-4 rounded">
+   <section class="bg-white shadow p-4 rounded hover:shadow-lg transition">
       <h2 class="font-bold text-lg mb-2">Pendidikan</h2>
       <p>Lulusan Teknik Elektro dari ITS Surabaya.</p>
     </section>
 
     <!-- Kotak 3 -->
-    <section class="bg-white shadow p-4 rounded">
+   <section class="bg-white shadow p-4 rounded hover:shadow-lg transition">
       <h2 class="font-bold text-lg mb-2">Keahlian</h2>
       <p>HTML, CSS, AutoCAD, PLC, SCADA, Inverter, dll.</p>
     </section>
 
     <!-- Kotak 4 -->
-    <section class="bg-white shadow p-4 rounded">
+   <section class="bg-white shadow p-4 rounded hover:shadow-lg transition">
       <h2 class="font-bold text-lg mb-2">Pekerjaan</h2>
       <p>Saya adalah Specialist Electrical Maintenance di Pulp and Paper.</p>
     </section>
