--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -78,6 +78,22 @@
   </div>
 </main>
 
+
+ <div class="max-w-sm mx-auto bg-white shadow-md rounded-xl overflow-hidden mt-10">
+  <img class="w-full h-48 object-cover" src="foto-profil.jpg" alt="Foto Oka Ginting" />
+
+  <div class="p-6">
+    <h2 class="text-xl font-semibold text-gray-800">Oka Ginting</h2>
+    <p class="text-gray-600 mt-2">Frontend Web Developer Pemula yang sedang belajar Tailwind CSS.</p>
+
+    <div class="mt-4">
+      <a href="CV Oka Ginting.pdf" download class="inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition">
+        Unduh CV
+      </a>
+    </div>
+  </div>
+</div>
+
  
     <div class="pb-12"></div>
   </main>
