--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -80,7 +80,7 @@
 
 
  <div class="max-w-sm mx-auto bg-white shadow-md rounded-xl overflow-hidden mt-10">
-  <img class="w-full h-48 object-cover" src="foto-profil.jpg" alt="Foto Oka Ginting" />
+  <img class="w-full h-48 object-cover" src="favicon.png" alt="Foto Oka Ginting" />
 
   <div class="p-6">
     <h2 class="text-xl font-semibold text-gray-800">Oka Ginting</h2>
