--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -80,14 +80,14 @@
 
 
  <div class="max-w-sm mx-auto bg-white shadow-md rounded-xl overflow-hidden mt-10">
-  <img class="w-full h-48 object-cover" src="favicon.png" alt="Foto Oka Ginting" />
+  <img class="w-32 h-32 object-cover rounded-full mx-auto" alt="Oka Ginting" />
 
-  <div class="p-6">
+  <div class="text-center">
     <h2 class="text-xl font-semibold text-gray-800">Oka Ginting</h2>
     <p class="text-gray-600 mt-2">Frontend Web Developer Pemula yang sedang belajar Tailwind CSS.</p>
 
     <div class="mt-4">
-      <a href="CV Oka Ginting.pdf" download class="inline-block px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600 transition">
+      <a href="CV Oka Ginting.pdf" download class=""bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded transition">
         Unduh CV
       </a>
     </div>
