--- a/index-tailwind.html
+++ b/index-tailwind.html
@@ -94,6 +94,40 @@
   </div>
 </div>
 
+
+<section class="max-w-xl mx-auto p-8 bg-white shadow rounded-xl mt-10">
+  <h2 class="text-2xl font-bold mb-6 text-center text-blue-600">Hubungi Saya</h2>
+
+  <form class="space-y-4">
+    <!-- Nama -->
+    <div>
+      <label for="nama" class="block text-sm font-medium text-gray-700">Nama</label>
+      <input type="text" id="nama" name="nama" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" />
+    </div>
+
+    <!-- Email -->
+    <div>
+      <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+      <input type="email" id="email" name="email" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring focus:ring-blue-200 focus:outline-none" />
+    </div>
+
+    <!-- Pesan -->
+    <div>
+      <label for="pesan" class="block text-sm font-medium text-gray-700">Pesan</label>
+      <textarea id="pesan" name="pesan" rows="4" required
+        class="mt-1 block w-full px-4 py-2 border border-gray-300 rounded-md shadow-sm focus:ring focus:ring-blue-200 focus:outline-none"></textarea>
+    </div>
+
+    <!-- Tombol -->
+    <div class="text-right">
+      <button type="submit"
+        class="bg-blue-600 text-white px-5 py-2 rounded-md hover:bg-blue-700 transition">Kirim</button>
+    </div>
+  </form>
+</section>
+
  
     <div class="pb-12"></div>
   </main>
