--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -6,7 +6,7 @@
   <title>Oka Ginting – Portofolio</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-white text-black dark:bg-gray-800 dark:text-white">
   <!-- NAVBAR -->
   <header class="bg-blue-600 text-white p-4 shadow">
     <div class="container mx-auto flex justify-between items-center">
