--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -35,6 +35,35 @@
   </section>
 
   <!-- Keahlian -->
+  <!-- Tentang Saya -->
+<section id="tentang" class="max-w-4xl mx-auto px-4 py-16">
+  <h2 class="text-2xl font-bold text-center mb-4">Tentang Saya</h2>
+  <p class="text-gray-700 text-center">
+    Saya adalah lulusan Teknik Elektro dari ITS Surabaya, saat ini sedang belajar menjadi Frontend Developer secara mandiri. Fokus saya adalah membangun website sederhana yang responsif dan menarik.
+  </p>
+</section>
+
+<!-- Keahlian -->
+<section id="keahlian" class="bg-gray-50 py-16">
+  <div class="max-w-4xl mx-auto px-4">
+    <h2 class="text-2xl font-bold text-center mb-6">Keahlian</h2>
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 text-center">
+      <div class="bg-white shadow-md rounded-lg p-4">
+        <p class="font-semibold text-blue-600">HTML</p>
+      </div>
+      <div class="bg-white shadow-md rounded-lg p-4">
+        <p class="font-semibold text-blue-600">CSS</p>
+      </div>
+      <div class="bg-white shadow-md rounded-lg p-4">
+        <p class="font-semibold text-blue-600">JavaScript</p>
+      </div>
+      <div class="bg-white shadow-md rounded-lg p-4">
+        <p class="font-semibold text-blue-600">Tailwind CSS</p>
+      </div>
+    </div>
+  </div>
+</section>
+
   <section id="keahlian" class="py-12 bg-gray-100">
     <div class="container mx-auto">
       <h3 class="text-2xl font-semibold mb-4">Keahlian</h3>
