--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -56,6 +56,45 @@
     </div>
   </div>
 </section>
+<!-- Proyek -->
+<section id="proyek" class="py-16 px-4 bg-white">
+  <div class="max-w-6xl mx-auto">
+    <h2 class="text-2xl font-bold text-center mb-10">Proyek Saya</h2>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+      <!-- Proyek 1 -->
+      <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
+        <img src="https://source.unsplash.com/400x250/?website" alt="Proyek 1" class="w-full h-48 object-cover">
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">Website CV Online</h3>
+          <p class="text-sm text-gray-600">Website statis portofolio yang menampilkan biodata dan kontak saya.</p>
+          <a href="https://okaginting.github.io/learning/" target="_blank" class="text-blue-500 hover:underline text-sm">Lihat Proyek</a>
+        </div>
+      </div>
+
+      <!-- Proyek 2 -->
+      <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
+        <img src="https://source.unsplash.com/400x250/?dashboard" alt="Proyek 2" class="w-full h-48 object-cover">
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">Landing Page Tailwind</h3>
+          <p class="text-sm text-gray-600">Landing page responsif menggunakan Tailwind CSS dan struktur grid.</p>
+          <a href="https://okaginting.github.io/learning/index-tailwind.html" target="_blank" class="text-blue-500 hover:underline text-sm">Lihat Proyek</a>
+        </div>
+      </div>
+
+      <!-- Proyek 3 -->
+      <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
+        <img src="https://source.unsplash.com/400x250/?form" alt="Proyek 3" class="w-full h-48 object-cover">
+        <div class="p-4">
+          <h3 class="font-semibold text-lg">Form Google Sheet</h3>
+          <p class="text-sm text-gray-600">Formulir HTML yang terkoneksi dengan Google Sheet menggunakan script Google Apps.</p>
+          <a href="#" class="text-blue-500 hover:underline text-sm">Lihat Proyek</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
 
  
   <!-- Proyek -->
