--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -64,7 +64,7 @@
 
       <!-- Proyek 1 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-        <img src="https://source.unsplash.com/400x250/?website" alt="Proyek 1" class="w-full h-48 object-cover">
+        <img src="https://unsplash.com/photos/a-man-climbing-up-the-side-of-a-canyon-6NV2_KTTJDs" alt="Proyek 1" class="w-full h-48 object-cover">
         <div class="p-4">
           <h3 class="font-semibold text-lg">Website CV Online</h3>
           <p class="text-sm text-gray-600">Website statis portofolio yang menampilkan biodata dan kontak saya.</p>
