--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -96,21 +96,25 @@
   </div>
 </section>
 
-  <!-- Kontak -->
-  <section id="kontak" class="py-12 container mx-auto">
-    <h3 class="text-2xl font-semibold mb-4">Kontak Saya</h3>
-    <form action="https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec" method="POST" class="grid gap-4 max-w-md">
-      <input type="text" name="nama" placeholder="Nama" class="p-2 border rounded" required>
-      <input type="email" name="email" placeholder="Email" class="p-2 border rounded" required>
-      <textarea name="pesan" rows="4" placeholder="Pesan" class="p-2 border rounded" required></textarea>
-      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Kirim</button>
-    </form>
-  </section>
+  <section id="kontak" class="bg-gray-100 dark:bg-gray-800 py-12 px-4">
+  <div class="max-w-4xl mx-auto text-center">
+    <h2 class="text-3xl font-bold mb-4 text-gray-800 dark:text-white">Hubungi Saya</h2>
+    <p class="text-gray-600 dark:text-gray-300 mb-6">
+      Saya terbuka untuk peluang kerja remote, kolaborasi proyek, atau sekadar diskusi.
+    </p>
+    <div class="space-y-2">
+      <p class="text-gray-700 dark:text-gray-200">Email: <a href="mailto:okaginting3@gmail.com" class="text-blue-600 dark:text-blue-400 hover:underline">okaginting3@gmail.com</a></p>
+      <p class="text-gray-700 dark:text-gray-200">LinkedIn: <a href="https://linkedin.com/in/okaginting" class="text-blue-600 dark:text-blue-400 hover:underline">linkedin.com/in/okaginting</a></p>
+      <p class="text-gray-700 dark:text-gray-200">GitHub: <a href="https://github.com/okaginting" class="text-blue-600 dark:text-blue-400 hover:underline">github.com/okaginting</a></p>
+    </div>
+  </div>
+</section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-white text-center py-4 mt-12">
-    <p>© 2025 Oka Ginting. Dibuat dengan cinta dan semangat belajar.</p>
-  </footer>
+
+  <footer class="bg-gray-200 dark:bg-gray-900 text-center py-4 mt-12">
+  <p class="text-gray-700 dark:text-gray-300">© 2025 Oka Ginting. Dibuat dengan ❤️ dan semangat belajar.</p>
+</footer>
+
 </body>
 </html>
 
