--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -64,7 +64,7 @@
 
       <!-- Proyek 1 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-        <img src="https://unsplash.com/photos/a-man-climbing-up-the-side-of-a-canyon-6NV2_KTTJDs" alt="Proyek 1" class="w-full h-48 object-cover">
+       <img src="https://via.placeholder.com/400x250.png?text=Proyek+1" alt="Proyek 1" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h3 class="font-semibold text-lg">Website CV Online</h3>
           <p class="text-sm text-gray-600">Website statis portofolio yang menampilkan biodata dan kontak saya.</p>
@@ -74,7 +74,7 @@
 
       <!-- Proyek 2 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-        <img src="https://source.unsplash.com/400x250/?dashboard" alt="Proyek 2" class="w-full h-48 object-cover">
+       <img src="https://via.placeholder.com/400x250.png?text=Proyek+1" alt="Proyek 1" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h3 class="font-semibold text-lg">Landing Page Tailwind</h3>
           <p class="text-sm text-gray-600">Landing page responsif menggunakan Tailwind CSS dan struktur grid.</p>
@@ -84,7 +84,7 @@
 
       <!-- Proyek 3 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-        <img src="https://source.unsplash.com/400x250/?form" alt="Proyek 3" class="w-full h-48 object-cover">
+       <img src="https://via.placeholder.com/400x250.png?text=Proyek+1" alt="Proyek 1" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h3 class="font-semibold text-lg">Form Google Sheet</h3>
           <p class="text-sm text-gray-600">Formulir HTML yang terkoneksi dengan Google Sheet menggunakan script Google Apps.</p>
