--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -104,7 +104,7 @@
     </p>
     <div class="space-y-2">
       <p class="text-gray-700 dark:text-gray-200">Email: <a href="mailto:okaginting3@gmail.com" class="text-blue-600 dark:text-blue-400 hover:underline">okaginting3@gmail.com</a></p>
-      <p class="text-gray-700 dark:text-gray-200">LinkedIn: <a href="https://linkedin.com/in/okaginting" class="text-blue-600 dark:text-blue-400 hover:underline">linkedin.com/in/okaginting</a></p>
+      <p class="text-gray-700 dark:text-gray-200">LinkedIn: <a href="https://www.linkedin.com/in/oka-ginting-1a07b8285/" class="text-blue-600 dark:text-blue-400 hover:underline">linkedin.com/in/okaginting</a></p>
       <p class="text-gray-700 dark:text-gray-200">GitHub: <a href="https://github.com/okaginting" class="text-blue-600 dark:text-blue-400 hover:underline">github.com/okaginting</a></p>
     </div>
   </div>
