--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -22,6 +22,9 @@
     </div>
   </header>
   
+   <!-- Tombol tema -->
+  <button id="darkModeToggle">🌓 Ganti Tema</button>
+  
   <!-- HERO SECTION -->
   <section class="bg-blue-500 text-white py-20 text-center">
     <h2 class="text-3xl md:text-4xl font-bold">Halo, saya Oka Ginting</h2>
