--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -99,7 +99,12 @@
     </div>
   </div>
 </section>
-
+  
+ <section class="cv">
+  <h2>Download CV</h2>
+  <a href="CV Oka Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
+</section>
+  
   <section id="kontak" class="bg-gray-100 dark:bg-gray-800 py-12 px-4">
   <div class="max-w-4xl mx-auto text-center">
     <h2 class="text-3xl font-bold mb-4 text-gray-800 dark:text-white">Hubungi Saya</h2>
