--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -77,7 +77,7 @@
 
       <!-- Proyek 2 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-       <img src="icon.png" alt="Proyek 1" class="w-full h-48 object-cover" />
+       <img src="favicon.png" alt="Proyek 1" class="w-full h-48 object-cover" />
         <div class="p-4">
           <h3 class="font-semibold text-lg">Landing Page Tailwind</h3>
           <p class="text-sm text-gray-600">Landing page responsif menggunakan Tailwind CSS dan struktur grid.</p>
