--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Oka Ginting – Portofolio</title>
   <script src="script.js" defer></script> 
- <script src="https://cdn.tailwindcss.com"></script>
+ <script src="https://cdn.tailwindcss.com" defer></script>
   
 </head>
 <body class="bg-white text-black dark:bg-gray-800 dark:text-white">
