--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -102,8 +102,11 @@
 </section>
   
  <section class="cv">
-  <h2>Download CV</h2>
-  <a href="CV Oka Ginting.pdf" download class="btn">Unduh CV Saya (PDF)</a>
+  <div class="text-center my-8">
+  <a href="file/CV_Oka_Ginting.pdf" download class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded shadow">
+    📄 Unduh CV Saya (PDF)
+  </a>
+</div>
 </section>
   
   <section id="kontak" class="bg-gray-100 dark:bg-gray-800 py-12 px-4">
