--- a/index-fullpage.html
+++ b/index-fullpage.html
@@ -89,7 +89,7 @@
 
       <!-- Proyek 3 -->
       <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-       <img src="https://via.placeholder.com/400x250.png?text=Proyek+1" alt="Proyek 1" class="w-full h-48 object-cover" />
+       <img src="https://via.placeholder.com/300x200?text=Proyek+3" alt="Proyek Google Sheet" class="rounded-t-lg">
         <div class="p-4">
           <h3 class="font-semibold text-lg">Form Google Sheet</h3>
           <p class="text-sm text-gray-600">Formulir HTML yang terkoneksi dengan Google Sheet menggunakan script Google Apps.</p>
